chore: update architecture_intelligence Dockerfile and mcp_base, add project scaffolding

--- a/docker/Dockerfile.architecture_intelligence
+++ b/docker/Dockerfile.architecture_intelligence
@@ -19,4 +19,4 @@ ENV PYTHONPATH=/app/src
 ENV PYTHONUNBUFFERED=1
 ENV LOG_LEVEL=INFO
 
-CMD ["uvicorn", "src.agents.image.main:app", "--host", "0.0.0.0", "--port", "8305"]
+CMD ["uvicorn", "src.agents.architecture_intelligence.main:app", "--host", "0.0.0.0", "--port", "8305"]
